<resources>
    <string name="app_name">ReceiptTrackr</string>
    <string name="title_activity_budget">Budget</string>
    <string name="crop_item_names">Crop the list of item names</string>
    <string name="crop_item_prices">Now crop the list of item prices</string>
    <string name="test">abc</string>
    <string name="store_name_lbl">Store:</string>
    <string name="receipt_date_lbl">Date:</string>
    <string name="receipt_items_lbl">Items:</string>
    <string name="receipt_total">Total: £</string>
    <string name="payment_type_lbl">Payment type:</string>
    <string name="noReceiptsInfo">There are no receipts to show</string>
    <string name="capture_error_dialog">Unable to read receipt</string>
    <string name="pound_symbol">£</string>
    <string name="new_budget_apply">Apply</string>
    <string name="new_budget_lbl">- New Weekly Budget -</string>
    <string name="total_spent_lbl">Total spent this week:</string>
    <string name="budget_not_set_lbl">Not set</string>
    <string name="weekly_budget_lbl">- Your Weekly Budget -</string>
    <string name="discount_txt">Discount</string>
    <string name="negative_pound_symbol">£-</string>
    <string name="add_discount_btn">Add discount</string>
    <array name="supermarkets">
        <item>Aldi</item>
        <item>Asda</item>
        <item>Booths</item>
        <item>Budgens</item>
        <item>Co-op</item>
        <item>Farmfoods</item>
        <item>Fulton</item>
        <item>Heron</item>
        <item>Iceland</item>
        <item>Lidl</item>
        <item>Marks &amp; Spencer</item>
        <item>Morrisons</item>
        <item>Ocado</item>
        <item>Sainsbury</item>
        <item>Tesco</item>
        <item>Waitrose</item>
    </array>
    <array name="paymentMethods">
        <item>Visa</item>
        <item>MasterCard</item>
        <item>American Express</item>
        <item>Cash</item>
        <item>Card</item>
    </array>
</resources>
