<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.example.alex.receipttrackr.Activities.ReviewActivity">

    <TextView
        android:id="@+id/storeNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/store_name_lbl"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/storeNameTxt"
        android:layout_width="119dp"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/storeNameLbl"
        app:layout_constraintStart_toEndOf="@+id/storeNameLbl"
        app:layout_constraintTop_toTopOf="@+id/storeNameLbl" />

    <TextView
        android:id="@+id/receiptDateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/receipt_date_lbl"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/storeNameTxt"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/receiptDateTxt"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/receiptDateLbl"
        app:layout_constraintStart_toEndOf="@+id/receiptDateLbl"
        app:layout_constraintTop_toTopOf="@+id/receiptDateLbl"
        app:layout_constraintVertical_bias="0.615"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/itemsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_items_lbl"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/itemsLst"
        app:layout_constraintStart_toStartOf="@+id/itemsLst"
        tools:textSize="18sp" />

    <ListView
        android:id="@+id/itemsLst"
        android:layout_width="317dp"
        android:layout_height="246dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiptDateLbl" />

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalLbl"
        app:layout_constraintStart_toEndOf="@+id/totalLbl"
        app:layout_constraintTop_toTopOf="@+id/totalLbl"
        app:layout_constraintVertical_bias="0.0"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/totalLbl"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/receipt_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/paymentTypeLbl"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/payment_type_lbl"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalTxt"
        app:layout_constraintStart_toEndOf="@+id/totalTxt"
        app:layout_constraintTop_toTopOf="@+id/totalTxt"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/homeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeBtn"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/paymentMethodTxt"
        android:layout_width="82dp"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/paymentTypeLbl"
        app:layout_constraintStart_toEndOf="@+id/paymentTypeLbl"
        app:layout_constraintTop_toTopOf="@+id/paymentTypeLbl" />

    <Button
        android:id="@+id/retakeBtn"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Retake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTxt"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="@+id/retakeBtn"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintStart_toEndOf="@+id/retakeBtn"
        app:layout_constraintTop_toTopOf="@+id/retakeBtn" />

    <Button
        android:id="@+id/addDiscountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_discount_btn"
        app:layout_constraintStart_toStartOf="@+id/itemsLst"
        app:layout_constraintTop_toBottomOf="@+id/itemsLst" />


</android.support.constraint.ConstraintLayout>
